# rust-electron-audio

./: .gitignore
cpal/: Cargo.toml
cpal/examples/: beep.rs
dsp-chain/: Cargo.toml
dsp-chain/examples/: synth.rs  volume.rs
dsp-chain/src/: lib.rs
first/: Cargo.toml
first/node/: index.html  index.js  package-lock.json  package.json  renderer.js
first/src/: audio.rs  lib.rs
