[package]
name = "dsp-chain"
version = "0.13.1"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "bvssvni <bvssvni@gmail.com>",
    "indiv0"
]
description = "Provides a Node trait and a Graph type for chaining together audio generators/processors in a dsp graph."
readme = "README.md"
keywords = ["audio", "dsp", "io", "modular", "graph"]
license = "MIT"
repository = "https://github.com/RustAudio/dsp-chain.git"
homepage = "https://github.com/RustAudio/dsp-chain"
edition = "2018"

[lib]
name = "dsp"
path = "./src/lib.rs"

[dependencies]
daggy = "0.4.0"
dasp = { version = "0.11", git = "https://github.com/RustAudio/dasp", features = ["all"] }

[dev-dependencies]
portaudio = "0.7.0"
