[package]
name = "first"
version = "0.1.0"
authors = ["Stellan Haglund <sh@idly.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "*"
juniper_warp = "*"

env_logger = "0.8.1"
futures = "0.3.1"
log = "0.4.8"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2"
dsp-chain = "*"
